<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PdfDownloadActivity">

    <LinearLayout
        android:id="@+id/viewPdf"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/triosoftLogo"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo_app"
                    android:layout_margin="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/cyan"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout1">

                <ImageView
                    android:id="@+id/tree_img"
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    android:src="@drawable/tree"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/textView1"
                    android:text="@string/moto"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tree_img"/>

                <TextView
                    android:id="@+id/textView2"
                    android:text="@string/our_core_values"
                    android:visibility="gone"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView1"/>

                <LinearLayout
                    android:id="@+id/triosoftContact"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView1">

                    <View
                        android:layout_margin="5dp"
                        android:background="@drawable/ic_mobile"
                        android:layout_width="35dp"
                        android:layout_height="35dp"/>

                    <TextView
                        android:id="@+id/number1"
                        android:text="@string/number1"
                        android:paddingTop="12dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/number2"
                        android:text="@string/number2"
                        android:paddingTop="12dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/triosoftweb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/triosoftContact">

                    <View
                        android:layout_margin="5dp"
                        android:background="@drawable/ic_internet"
                        android:layout_width="35dp"
                        android:layout_height="35dp"/>

                    <TextView
                        android:text="@string/website_triosoft"
                        android:paddingTop="12dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/triosoftMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/triosoftweb">

                    <View
                        android:layout_margin="5dp"
                        android:background="@drawable/ic_email_img"
                        android:layout_width="35dp"
                        android:layout_height="35dp"/>

                    <TextView
                        android:text="@string/email_triosoft"
                        android:paddingTop="12dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/triosoftAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/triosoftMail">

                    <View
                        android:layout_margin="5dp"
                        android:background="@drawable/ic_location"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>

                    <TextView
                        android:text="@string/triosoft_address"
                        android:paddingTop="5dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <View
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <Button
        android:id="@+id/btnPrint"
        android:text="Print"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>